feat: update math notes

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -93,7 +93,7 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
-&emsp;&emsp;The pie chart above clearly reveals the results of a survey on the average times of consumers' ordering takeaway per month in China in 2021. According to the data, the percentage of ordering takeaway from on to five times is the largest among the five groups, accounting for 35.2%; the percentage of ordering takeaway from six to ten times is 27%. In contrast, the percentage of never ordering takeaway merely takes up 18.5%.<br>
+&emsp;&emsp;The pie chart above clearly reveals the results of a survey on the average times of consumers' ordering takeaway per month in China in 2021. According to the data, the percentage of ordering takeaway from one to five times is the largest among the five groups, accounting for 35.2%; the percentage of ordering takeaway from six to ten times is 27%. In contrast, the percentage of never ordering takeaway merely takes up 18.5%.<br>
 &emsp;&emsp;Primary factors that result in the phenomenon may be summarized as follows. To begin with, with the quickening pace of urban life and ever-increasing work pressure in recent years, a good many people prefer ordering takeaway to going to a restaurant. In addition, in a bid to enjoy a comfortable life, instead of cooking by themselves, consumers in mounting numbers are willing to order takeaway in companies or at home. Lastly, the prosperous takeaway industry can be ascribed to the speedy development of online shopping and express delivery business.<br>
 &emsp;&emsp;Briefly speaking, the booming takeaway industry undoubtedly contributes to the prosperity of the economy.<br>
 
