--- a/math/linear_algebra/determinant.tex
+++ b/math/linear_algebra/determinant.tex
@@ -7,7 +7,30 @@
 \usepackage{geometry}       % 页面布局
 \usepackage{bm}             % 粗体
 \usepackage{xcolor}         % 颜色
+\usepackage{tabularx}       %表格环境
+\usepackage{tikz}           % TikZ 绘制主对角线斜线
+\usepackage{tcolorbox}
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
+
+% 抽离颜色和尺寸参数
+\newcommand{\analysisTitleColor}{green!50!black}
+\newcommand{\analysisBackColor}{white}
+\newcommand{\analysisBoxRule}{0.8pt}
+\newcommand{\analysisArc}{3pt}
+\newcommand{\analysisPadding}{6pt}
+
+% 定义 tcolorbox
+\newtcolorbox{analysisbox}{
+    title=解析,
+    colback=\analysisBackColor,
+    colframe=\analysisTitleColor,
+    boxrule=\analysisBoxRule,
+    arc=\analysisArc,
+    left=\analysisPadding,
+    right=\analysisPadding,
+    top=4pt,
+    bottom=4pt
+}
 
 % =========================
 % 字体设置
@@ -36,6 +59,13 @@
 
 
     \section{行列式}
+
+    \subsection{基础概念}
+    \begin{enumerate}
+        \item 由$1, 2, \dots, n$组成的有序数组程伟一个$n$阶排列，通常用$j_1, j_2, \dots, j_n$表示$n$阶排列
+        \item 一个排列中，如果一个大的数排在小的数之前，就称这两个数构成\textbf{一个逆序}，\textbf{一个排列的逆序总数称为这个排列的逆序数}，用$\tau(j_1, j_2, \dots, j_n)$表示
+        \item 如果一个排列的逆序数是偶数，则称这个排列为\textbf{偶排列}，否则称为\textbf{奇排列}
+    \end{enumerate}
 
     \subsection{性质}
 
@@ -67,11 +97,21 @@
 
     \subsubsection{余子式 \& 代数余子式}
 
-    在 $n$ 阶行列式中，划去元素 $a_{ij}$ 所在的第 $i$ 行、第 $j$ 列，由剩下的元素按原来的排法构成一个 $(n-1)$ 阶行列式，称为 $a_{ij}$ 的 \textbf{余子式}，记为$M_{ij}$；称$(-1)^{i+j}M_{ij}$为$a_{ij}$的代数余子式，记为$A_{ij}$，即
-
-    \[
-        A_{ij} = (-1)^{i+j}M_{ij}
-    \]
+    \begin{enumerate}
+        \item 在 $n$ 阶行列式中，划去元素 $a_{ij}$ 所在的第 $i$ 行、第 $j$ 列，由剩下的元素按原来的排法构成一个 $(n-1)$ 阶行列式，称为 $a_{ij}$ 的 \textbf{余子式}，记为$\mathbf{M_{ij}}$；称$(-1)^{i+j}M_{ij}$为$a_{ij}$的\textbf{代数余子式}，记为$\mathbf{A_{ij}}$，即
+        \[
+            A_{ij} = (-1)^{i+j}M_{ij}
+        \]
+        \item 三阶行列式的代数余子式
+        \[
+            A_{ij} =
+            \begin{bmatrix}
+                M_{11}  & -M_{12} & M_{13}  \\
+                -M_{21} & M_{22}  & -M_{23} \\
+                M_{31}  & -M_{32} & M_{33}
+            \end{bmatrix}.
+        \]
+    \end{enumerate}
 
     \subsection{定理}
 
@@ -183,15 +223,53 @@
     \]
 
     \subsubsection{特征多项式}
+    \begin{enumerate}
+        \item 设$A = [a_{ij}]$是三阶矩阵，则$A$的特征多项式
+        \[
+            |A - \lambdaE| = -\lambda^3 + (a_{11} + a_{22} + a_{33})\lambda^2 - s_2 \lambda + |A|
+        \]其中$s_2 =
+        \begin{vmatrix}
+            a_{11} & a_{12} \\
+            a_{21} & a_{22}
+        \end{vmatrix}
+        +
+        \begin{vmatrix}
+            a_{11} & a_{13} \\
+            a_{31} & a_{33}
+        \end{vmatrix}
+        +
+        \begin{vmatrix}
+            a_{22} & a_{23} \\
+            a_{32} & a_{33}
+        \end{vmatrix}.$
+    \end{enumerate}
 
     \subsection{方阵行列式}
 
     \begin{enumerate}
         \item 若$A$是$n$阶矩阵，$A^T$是$A$的转置矩阵 \, \Rightarrow \, $|A^T| = |A|$
         \item 若$A$是$n$阶矩阵 \, \Rightarrow \, $|kA| = k^{n}|A|$
-        \item 若$A$，$B$都是$n$阶矩阵 \, \Rightarrow \, $|AB| = |A||B|$ \;\text{,} $|A^2| = |A|^2$
+        \item 若$A$，$B$都是$n$阶矩阵 \, \Rightarrow \, $|AB| = |A||B|, |A^2| = |A|^2$
         \item 若$A$是$n$阶矩阵 \, \Rightarrow \, $|A^*| = |A|^{n-1}$
         \item 若$A$是$n$阶\textbf{可逆}矩阵 \, \Rightarrow \, $|A^{-1}| = |A|^{-1}$
+        \item 若$A$是$n$阶矩阵，$\lambda_i(i = 1, 2, \cdots, n)$是$A$的特征值 \, \Rightarrow \, $|A| = \lambda_1 \lambda_2 \cdots \lambda_n$
+        \item 若$n$阶矩阵$A$与$B$相似 \, \Rightarrow \, $|A| = |B|, |A + kE| = |B + kE|$
+        \item
+        \[
+            \begin{vmatrix}
+                A & B \\
+                B & A
+            \end{vmatrix}
+            = \begin{vmatrix}
+                  A + B & A + B \\
+                  B     & A
+            \end{vmatrix}
+            = \begin{vmatrix}
+                  A + B & 0     \\
+                  B     & A - B
+            \end{vmatrix}
+            = |A + B| \cdot |A - B|
+        \]
     \end{enumerate}
 
     \subsection{克拉默法则}
@@ -239,4 +317,67 @@
         \item 系数行列式$|A| = 0$ $\Leftrightarrow$ 方程组\textbf{有非零解}
     \end{enumerate}
 
+    \subsection{方法步骤}
+
+    \begin{enumerate}
+        \item 对于\textbf{主对角线爪型}行列式，可用\textbf{主}对角线元素将其化为上（下）三角型来计算
+        \[
+            \begin{bmatrix}
+                1 & 1 & 1 & 1 \\
+                1 & 2 & 0 & 0 \\
+                1 & 0 & 3 & 0 \\
+                1 & 0 & 0 & 4
+            \end{bmatrix}
+        \]
+        \item 对于\textbf{副对角线爪型}行列式，可用\textbf{副}对角线元素将其化为\textbf{反上（下）三角型}来计算
+        \[
+            \begin{bmatrix}
+                1 & 1 & 1 & 1 \\
+                0 & 0 & 2 & 1 \\
+                0 & 3 & 0 & 1 \\
+                4 & 0 & 0 & 1
+            \end{bmatrix}
+        \]
+        \item 把各行（列）均加到第一行（列）
+        \item 逐行（列）相加
+        \item 若有较多$0$，可考虑直接用行（列）展开公式
+        \item 特殊的\textbf{三对角线}行列式
+        \begin{enumerate}
+            \item 三角化法: 逐行相加，构造上下三角型
+            \item 递推法
+            \item 归纳法
+        \end{enumerate}
+        \item 数学归纳法
+        \begin{itemize}
+            \item \textbf{普通数学归纳法（Mathematical Induction）}
+            \begin{enumerate}
+                \item 验证 $n = 1$ 时，命题 $f_n$ 成立；
+                \item 假设 $n = k$ 时，命题 $f_n$ 成立；
+                \item 证明 $n = k + 1$ 时，命题 $f_n$ 成立。
+            \end{enumerate}
+
+            \item \textbf{强（完全）归纳法（Strong Induction）}
+            \begin{enumerate}
+                \item 验证 $n = 1$ 和 $n = 2$ 时，命题 $f_n$ 成立；
+                \item 假设当 $n < k$ 时，命题 $f_n$ 均成立；
+                \item 证明 $n = k$ 时，命题 $f_n$ 成立。
+            \end{enumerate}
+        \end{itemize}
+    \end{enumerate}
+
+    \subsection{条件转换思路}
+
+    \begin{enumerate}
+        \item 齐次方程组$Ax = 0$有非零解
+        \begin{align*}
+            &\Leftrightarrow\; r(A) < n (\text{其中}n = \text{未知数的个数})  \\
+            &\Leftrightarrow\; |A| = 0  \\
+            &\Leftrightarrow\; A \text{的列向量组线性相关}  \\
+        \end{align*}
+    \end{enumerate}
+
+    \subsection{理解}
+
+    \begin{enumerate}
+    \end{enumerate}
 \end{document}
