feat: add Unit7

--- a/math/linear_algebra/eigen-value-vector.tex
+++ b/math/linear_algebra/eigen-value-vector.tex
@@ -54,13 +54,10 @@
 %    \author{Bowen}
 %    \date{\today}
 %    \maketitle
-%    \tableofcontents
-%    \newpage
-
 
 % =========================
 
-    \section{title}
+    \section{特征值与特征向量}
 
     \subsection{基础概念}
 
