--- a/math/linear_algebra/linear-system.tex
+++ b/math/linear_algebra/linear-system.tex
@@ -394,4 +394,9 @@
         \end{enumerate}
     \end{enumerate}
 
+    \subsection{理解}
+
+    \begin{enumerate}
+    \end{enumerate}
+
 \end{document}
