--- a/math/linear_algebra/vector.tex
+++ b/math/linear_algebra/vector.tex
@@ -82,7 +82,17 @@
         \item 设有两个$n$维向量组$(I)\alpha_1, \alpha_2, \dots, \alpha_s$;$(II)\beta_1, \beta_2, \dots, \beta_t$，如果$(I)$中每个向量$\alpha_i(i = 1,2,\dots,s)$都可由$(II)$中的向量$\beta_1, \beta_2, \dots, \beta_t$线性表出，则称向量组$(I)$可由向量组$(II)$线性表出
         \item 如果$(I)(II)$这两个向量组可以互相线性表出，则称这两个\textbf{向量组等价}
         \item 在向量组$\alpha_1, \alpha_2, \dots, \alpha_s$中，若存在$r$个向量$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}$线性相关，再加进任一向量$a_j(j = 1,2,\dots,\s)$，向量组$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}, \alpha_j$就线性相关，则称$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}$是向量组$\alpha_1, \alpha_2, \dots, \alpha_s$的一个\textbf{极大线性无关组}
+        \begin{itemize}
+            \item 极大线性无关组可以表示向量组中任一向量
+            \item 极大线性无关组{\color[rgb]{0.2, 0.6, 0.3}{不唯一}}，但其内的向量个数一致，即向量组的秩
+        \end{itemize}
         \item 向量组$\alpha_1, \alpha_2, \dots, \alpha_s$的极大线性无关组中所含向量的个数$r$称为这个向量组的秩
+        \begin{itemize}
+            \item $r(\alpha_1, \alpha_2, \dots, \alpha_{n-1}) \le r(\alpha_1, \alpha_2, \dots, \alpha_{n-1}, \alpha_n)$
+            \item $r(\alpha_1, \alpha_2, \dots, \alpha_n) \le n$
+        \end{itemize}
+        \item 初等行变换不会改变列向量组的线性相关性，也不会改变它们之间的线性组合系数
+        \item 线性表示具有传递性
     \end{enumerate}
 
     \subsection{定理}
@@ -94,9 +104,10 @@
             &\Leftrightarrow\; \text{向量组的秩}r(\alpha_1, \alpha_2, \dots, \alpha_s) < s, s\text{表示}\textbf{未知数的个数}\text{或}\textbf{向量个数} \\
             &\Leftrightarrow\; \text{若向量组是{\color{red}{方阵}}($n$个$n$维向量)，则}|\alpha_1, \alpha_2, \dots, \alpha_n| = 0
         \end{align*}
+        \item 向量组的秩$r(\alpha_1, \alpha_2, \dots, \alpha_s) = s \Leftrightarrow \alpha_1, \alpha_2, \dots, \alpha_s$线性无关
         \item $n+1$个$n$维向量一定线性相关
-        \item 任何{\color{red}{部分}}组$\alpha_1, \alpha_2, \dots, \alpha_r$相关 \Rightarrow \text{{\color{green}{整体}}组}$\alpha_1, \alpha_2, \dots, \alpha_r, \dots \alpha_s$相关
-        \item {\color{red}{整体}}组$\alpha_1, \alpha_2, \dots, \alpha_r, \dots \alpha_s$无关 \Rightarrow \text{{\color{green}{部分}}组}$\alpha_1, \alpha_2, \dots, \alpha_r$无关
+        \item 任何{\color{red}{部分}}组$\alpha_1, \alpha_2, \dots, \alpha_r$相关 \Rightarrow \text{{\color[rgb]{0.2, 0.6, 0.3}{整体}}组}$\alpha_1, \alpha_2, \dots, \alpha_r, \dots \alpha_s$相关
+        \item {\color{red}{整体}}组$\alpha_1, \alpha_2, \dots, \alpha_r, \dots \alpha_s$无关 \Rightarrow \text{{\color[rgb]{0.2, 0.6, 0.3}{部分}}组}$\alpha_1, \alpha_2, \dots, \alpha_r$无关
         \item $\alpha_1, \alpha_2, \dots, \alpha_n$ 线性无关 \Rightarrow \text{延伸组}$\widetilde{\mathbf{\alpha_1}}, \widetilde{\mathbf{\alpha_2}}, \dots, \widetilde{\mathbf{\alpha_n}}$线性无关
         \item $\widetilde{\mathbf{\alpha_1}}, \widetilde{\mathbf{\alpha_2}}, \dots, \widetilde{\mathbf{\alpha_n}}$线性相关 \Rightarrow \text{缩短组}$\alpha_1, \alpha_2, \dots, \alpha_n$ 线性相关
         \item 向量$\beta$可由向量组$\alpha_1, \alpha_2, \dots, \alpha_s$线性表出
@@ -133,43 +144,141 @@
             \item $k(\alpha + \beta) = k\alpha + k\beta$
             \item $(k + l)\alpha = k\alpha + l\alpha$
         \end{enumerate}
-        \item
     \end{enumerate}
 
-    \subsection{条件转换思路}
+    \subsection{公式}
 
     \begin{enumerate}
-        \item 线性无关的判定与证明:\; 若向量的坐标没有给出，通常用\textbf{定义法} Or \textbf{秩的理论} Or \textbf{反证法}
+
+    \end{enumerate}
+
+    \subsection{方法步骤}
+
+    \begin{enumerate}
+        \item 判断多个向量是否线性相关
+        \begin{itemize}
+            \item 含有零向量 $\mathbf{0}$ $\Rightarrow$ 线性相关
+            \item 两个向量成比例 $\Rightarrow$ 线性相关
+            \item 存在关系 $\alpha_1 + \alpha_2 = \alpha_3$(定义) $\Rightarrow$ 线性相关
+        \end{itemize}
+        \item 线性无关的判定与证明:\; 若向量的坐标没有给出，通常用\textbf{定义法} 或 \textbf{秩的理论} 或 \textbf{反证法}
         \begin{enumerate}
             \item \textbf{定义法}证$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关
             \begin{enumerate}
                 \item 设$k_{1}\alpha_1 + k_{2}\alpha_2 + \dots + k_{s}\alpha_s = 0$
-                \item \Downarrow \text{恒等变形(同乘: 看条件 + 构造条件 or 重组)}
+                \item \Downarrow \text{恒等变形(同乘: 看条件 + 构造条件 或 重组)}
                 \item $k_1 = 0, k_2 = 0, \dots, k_s = 0$
             \end{enumerate}
             \item \textbf{秩}证$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关
             \begin{enumerate}
                 \item \Leftrightarrow $[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_s]^T = 0$只有零解
                 \item \Leftrightarrow \text{秩}$r(\alpha_1, \alpha_2, \dots, \alpha_s) = s$
-                \begin{enumerate}
+                \begin{itemize}
                     \item $r(A) = A\text{的列秩} = A\text{的行秩}$
                     \item $r(AB) \le r(A) \text{且} r(AB) \le r(B)$
                     \item 若$A$可逆，则$r(AB) = r(BA) = r(B)$
                     \item 若$A$是$m \times n$矩阵，且$r(A) = n$，则$r(AB) = r(B)$
                     \item 若$A$是$m \times n$矩阵，$B$是$n \times s$矩阵，且$AB = \mathbf{O}$，则$r(A) + r(B) \le n$
-                \end{enumerate}
+                \end{itemize}
             \end{enumerate}
             \item \textbf{反证法}
+            \item 线性方程组$Ax = 0$
+            \begin{itemize}
+                \item 只有零解 \Leftrightarrow \text{线性无关}
+                \item 有非零解 \Leftrightarrow \text{线性相关}
+            \end{itemize}
+            \item 若是$n$个$n$维向量
+            \begin{itemize}
+                \item $|\alpha_1, \alpha_2, \dots, \alpha_n| = 0 \Leftrightarrow$ 相关
+                \item $|\alpha_1, \alpha_2, \dots, \alpha_n| \neq 0 \Leftrightarrow$ 无关
+            \end{itemize}
         \end{enumerate}
         \item 判断能否线性表出
         \begin{enumerate}
-            \item 若已知向量坐标 \Rightarrow \text{非齐次线性方程组是否有解}
-            \item 若向量坐标没有给出 \Rightarrow \text{线性相关 Or 秩}
+            \item $\text{若向量坐标具体} \Rightarrow \text{非齐次线性方程组是否有解}$
+            \begin{itemize}
+                \item $\text{有解} \Rightarrow \text{能线性表出}$
+                \item $\text{无解} \Rightarrow \text{不能线性表出}$
+            \end{itemize}
+            \item $\text{若向量坐标没有} \Rightarrow \text{线性相关 或 秩}$
+            \begin{itemize}
+                \item $r(\alpha_1, \alpha_2, \dots, \alpha_n) = r(\alpha_1, \alpha_2, \dots, \alpha_n, \beta) \Rightarrow$ 线性表出
+                \item $r(\alpha_1, \alpha_2, \dots, \alpha_n) \neq r(\alpha_1, \alpha_2, \dots, \alpha_n, \beta) \Rightarrow$ 不能线性表出
+                \item 线性相关
+            \end{itemize}
         \end{enumerate}
+        \item 求向量组的秩
+        \begin{itemize}
+            \item 设向量组$(\alpha_1, \alpha_2, \dots, \alpha_s)$的矩阵为 $A = [\alpha_1, \alpha_2, \dots, \alpha_s]$ 对$A$作初等行变换得到行最简形矩阵$A'$，则
+            \[
+                r(A') = r(A) = \text{向量组}(\alpha_1, \alpha_2, \dots, \alpha_s)\text{的秩}
+            \]
+            \item 若存在$r$阶子式不为零，则$r$为矩阵的秩，对应的$r$个向量构成一组最大线性无关组
+        \end{itemize}
+    \end{enumerate}
+
+    \subsection{条件转换思路}
+
+    \begin{enumerate}
         \item $\text{向量组}(I)(II)\text{等价}$
         \begin{align*}
+            &\Leftrightarrow\; (I)\text{可由}(II)\text{线性表出}\text{且}(II)\text{可由}(I)\text{线性表出} \\
             &\Leftrightarrow\; r(I) = r(II) = r(I, II) \\
-            &\Leftrightarrow\; r(I) = r(II)\text{且}(I)\text{可由}(II)\text{线性表出}  \\
+            &\Leftrightarrow\; r(I) = r(II)\text{且}(I)\text{可由}(II)\text{线性表出}
+        \end{align*}
+        \item $\alpha_1, \alpha_2, \alpha_3$可以表示任意一个三维向量
+        \begin{align*}
+            &\Leftrightarrow\; \text{三者线性无关}  \\
+            &\Leftrightarrow\; \text{三者是一组基底}  \\
+            &\Leftrightarrow\; (a, b, c)^T\text{能由}\alpha_1, \alpha_2, \alpha_3\text{线性表示}
+        \end{align*}
+        \item 如果$\gamma = (a, b, c)^T$(任意向量)不能由$(\alpha_1, \alpha_2, \alpha_3)$线性表出
+        \begin{align*}
+            &\Leftrightarrow\; \alpha_1, \alpha_2, \alpha_3\text{不可表示任意一个三维向量}  \\
+            &\Leftrightarrow\; \alpha_1, \alpha_2, \alpha_3\text{线性相关}  \\
+            &\Leftrightarrow\; |\alpha_1, \alpha_2, \alpha_3| = 0
+        \end{align*}
+        \item $\alpha_1, \alpha_2, \alpha_3\text{如果线性相关} \;\Rightarrow\; \text{构成一个平面或一条直线}$
+        \item $\alpha_1, \alpha_2, \alpha_3$线性无关，$\beta_1$可由$\alpha_1, \alpha_2, \alpha_3$线性表示，$\beta_2$不能由$\alpha_1, \alpha_2, \alpha_3$线性表示，则
+        \begin{enumerate}
+            \item $\alpha_1, \alpha_2, \alpha_3, \beta_1$线性相关
+            \item $\alpha_1, \alpha_2, \alpha_3, \beta_2$线性无关
+            \item 对于任意实数$k$，有$\alpha_1, \alpha_2, \alpha_3, k\beta_1 + \beta_2$线性无关
+            \item 对于任意实数$k$，$\alpha_1, \alpha_2, \alpha_3, \beta_1 + k\beta_2$
+            \begin{itemize}
+                \item $k = 0$ \Rightarrow \text{相关}
+                \item $k \neq 0$ \Rightarrow \text{无关}
+            \end{itemize}
+        \end{enumerate}
+        \item 向量组$\alpha_1, \alpha_2, \alpha_3$可由向量组$\beta_1, \beta_2, \beta_3$线性表示 \;\Rightarrow\; $r(\alpha_1, \alpha_2, \alpha_3) \le r(\beta_1, \beta_2, \beta_3)$
+        \item $\beta$可由$\alpha_1, \alpha_2, \alpha_3$线性表出，且表示法{\color{red}{不}}唯一
+        \begin{align*}
+            &\Leftrightarrow\; Ax = \beta\text{有无穷多解} \\
+            &\Leftrightarrow\; r(\alpha_1, \alpha_2, \alpha_3) = r(\alpha_1, \alpha_2, \alpha_3, \beta) < 3 \\
+            &\Rightarrow\; \alpha_1, \alpha_2, \alpha_3\text{线性相关}
+        \end{align*}
+        \item $r(\alpha_1, \alpha_2, \dots, \alpha_n) \neq r(\alpha_1, \alpha_2, \dots, \alpha_n, \beta)$
+        \begin{align*}
+            &\Leftrightarrow\; Ax = \beta\text{无解} \\
+            &\Rightarrow\; \beta\text{不能由}\alpha_1, \alpha_2, \alpha_3\text{线性表出}
         \end{align*}
     \end{enumerate}
+
+    \subsection{理解}
+
+    \begin{enumerate}
+        \item $\text{线性相关无关} \;\Rightarrow\; Ax = 0\text{齐次方程组非零解的问题}$
+        \item $\text{线性表示} \;\Rightarrow\; Ax = \beta(\text{其中}A = [\alpha_1, \alpha_2, \dots, \alpha_n])\text{非齐次方程组解的问题}$
+        \begin{itemize}
+            \item 非齐次方程组的解向量 $x$ 即为线性表示的系数
+            \item 对于 $n$ 维向量，有 $n$ 个方程，未知数个数等于向量个数
+            \item 根据秩的不同，线性表示有三种情况：
+            \begin{enumerate}
+                \item \textbf{唯一表示:}$\; r(A) = r(A,\beta) = n$，$(\alpha_1, \alpha_2, \dots, \alpha_n)$向量组线性无关
+                \item \textbf{无穷多表示:}$\; r(A) = r(A,\beta) < n$，$(\alpha_1, \alpha_2, \dots, \alpha_n)$向量组线性相关
+                \item \textbf{无表示:}$\; r(A) < r(A,\beta)$，$\beta$ 不能由 $(\alpha_1,\dots,\alpha_n)$ 线性表示
+            \end{enumerate}
+        \end{itemize}
+    \end{enumerate}
+
 \end{document}
